Fix page title anchor position so it is not covered by the header

--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -749,8 +749,9 @@ article section.page h1:first-of-type {
 }
 article section.page h1 {
   margin-top: 3.5rem; }
-article section.page h2 {
-  margin-top: 2.5rem; }
+article section.page h2, article section.page h3 {
+  padding-top: 80px;
+  margin-top: -80px; }
 article section.page table {
   width: 100%;
   margin-bottom: 2em;
